--- a/src/components/CourseCard/CourseCard.module.css
+++ b/src/components/CourseCard/CourseCard.module.css
@@ -36,7 +36,7 @@
   justify-content: space-between;
   margin-top: 0.5rem;
   font-size: 13px;
-  color: #888780;
+  color: #6b6a65;
 }
 
 .published {
