--- a/src/pages/CoursesPage.module.css
+++ b/src/pages/CoursesPage.module.css
@@ -9,7 +9,7 @@
 }
 
 .header p {
-  color: #888780;
+  color: #6b6a65;
   font-size: 15px;
 }
 
@@ -38,7 +38,7 @@
 
 .count {
   font-size: 13px;
-  color: #888780;
+  color: #6b6a65;
 }
 
 .grid {
@@ -60,7 +60,7 @@
   margin-top: 4rem;
   text-align: center;
   font-size: 15px;
-  color: #888780;
+  color: #6b6a65;
 }
 
 .status.error {
