--- a/src/pages/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage.module.css
@@ -22,7 +22,7 @@
 
 .text {
   font-size: 14px;
-  color: #888780;
+  color: #6b6a65;
 }
 
 .link {
